Search view UI fixes

--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -70,6 +70,9 @@
             android:hint="Search Store"
             android:textColorHint="@color/colorLightWhite"
             android:textColor="@color/colorWhite"
+            android:imeOptions="actionSearch"
+            android:maxLines="1"
+            android:singleLine="true"
             app:fontFile="Roboto-Medium.ttf" />
     </RelativeLayout>
 
