--- a/app/src/main/res/layout/product_image_and_description.xml
+++ b/app/src/main/res/layout/product_image_and_description.xml
@@ -2,7 +2,6 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="5dp"
-    app:cardCornerRadius="7dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <RelativeLayout
@@ -24,6 +23,7 @@
             android:text="Orange Dress"
             app:fontFile="Roboto-Regular.ttf"
             android:layout_width="wrap_content"
+            android:maxWidth="100dp"
             android:layout_height="wrap_content"
             android:gravity="center" />
 
