--- a/app/src/main/res/drawable/bg_badge.xml
+++ b/app/src/main/res/drawable/bg_badge.xml
@@ -1,4 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <corners
+        android:radius="10dp"/>
+    <solid
+        android:color="@color/colorPrimaryDark" />
+    <stroke
+        android:width="2dp"
+        android:color="@color/colorPrimaryDark" />
+    <padding
+        android:left="5dp"
+        android:right="5dp"
+        android:top="5dp"
+        android:bottom="5dp" />
+</shape>
