--- a/app/src/main/res/layout/activity_store_detail.xml
+++ b/app/src/main/res/layout/activity_store_detail.xml
@@ -11,19 +11,20 @@
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize" />
 
+    <include
+        android:id="@+id/tl_tab_container"
+        android:layout_below="@+id/toolbar"
+        layout="@layout/layout_tab_search"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/btn_scan"
-        android:layout_below="@+id/toolbar">
+        android:layout_below="@+id/tl_tab_container">
 
-        <include
-            android:id="@+id/tl_tab"
-            layout="@layout/tab_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/toolbar" />
     </android.support.v4.view.ViewPager>
 
     <View
