--- a/app/src/main/res/layout/fragment_qr_test.xml
+++ b/app/src/main/res/layout/fragment_qr_test.xml
@@ -2,53 +2,36 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorAccent"
     android:orientation="vertical">
+
+    <EditText
+        android:id="@+id/et_search_product"
+        android:hint="Enter Barcode"
+        android:paddingLeft="20dp"
+        android:layout_margin="10dp"
+        android:textCursorDrawable="@color/colorWhite"
+        android:textColor="@color/colorWhite"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <ImageView
+        android:id="@+id/iv_search_product_by_barcode"
+        android:padding="9dp"
+        android:layout_marginTop="4dp"
+        android:layout_below="@+id/tv_detect_my_location"
+        android:tint="@color/colorBlack"
+        app:srcCompat="@drawable/places_ic_search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true" />
 
     <me.dm7.barcodescanner.zxing.ZXingScannerView
         android:id="@+id/scanner_view"
+        android:layout_below="@+id/et_search_product"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
     </me.dm7.barcodescanner.zxing.ZXingScannerView>
-
-    <!--<RelativeLayout-->
-        <!--android:id="@+id/view_container"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent">-->
-
-        <!--<Button-->
-            <!--android:id="@+id/btn_create_qr"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_centerHorizontal="true"-->
-            <!--android:text="Get QR Code"-->
-            <!--android:textAllCaps="false" />-->
-
-        <!--<ImageView-->
-            <!--android:id="@+id/iv_temp"-->
-            <!--android:layout_width="300dp"-->
-            <!--android:layout_height="300dp"-->
-            <!--android:layout_below="@+id/btn_create_qr"-->
-            <!--android:layout_centerHorizontal="true"-->
-            <!--android:layout_marginTop="20dp" />-->
-
-        <!--<Button-->
-            <!--android:id="@+id/btn_scan"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_below="@+id/iv_temp"-->
-            <!--android:layout_centerHorizontal="true"-->
-            <!--android:text="Start Scanner" />-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/tv_scan_text"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_below="@+id/btn_scan"-->
-            <!--android:layout_marginLeft="10dp"-->
-            <!--android:layout_marginRight="10dp"-->
-            <!--android:layout_marginTop="10dp" />-->
-    <!--</RelativeLayout>-->
-
-
 </RelativeLayout>
